--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-
-        <img src="banner.png">
+        <img src="banner.png" style="object-fit: contain;">
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
