--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <img src="banner.png" style="object-fit: contain;">
+        <img src="banner.png" style="object-fit: cover; object-position: 100%;">
         <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
