--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Rivers Racoco</title>
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
 <html>
     <body>
         <img src="banner.png" style="object-fit: cover; object-position: 100%;">
