--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
   <title>Rivers Racoco</title>
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <html>
     <body>
-        <img src="banner.png" style="object-fit: cover; object-position: 100%;">
-        <p>I'm hosted with GitHub Pages.</p>
+        <img src="banner.png" class="header-Image">
+        <div id="gradient" style="text-align:center;"></div>
     </body>
 </html>
