Matched Gradient to Image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <html>
     <body>
         <img src="banner.png" class="header-Image">
-        <div id="gradient" style="text-align:center;"></div>
+        <div id="gradient"></div>
     </body>
 </html>
