deprecated parallax added introductory body

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <html>
     <body>
-        <img src="banner.png" class="header-Image">
+        <img src="banner.png" class="header-Image header-parallax">
         <div id="gradient"></div>
+        <h1>Who am I?</h1>
     </body>
 </html>
