finished site rough draft

--- a/index.html
+++ b/index.html
@@ -14,5 +14,25 @@
         <img src="banner.png" class="header-Image header-parallax">
         <div id="gradient"></div>
         <h1>Who am I?</h1>
+        <p>Hi, I'm Rivers Racoco! I'm your average Racoon based V-tuber who enjoys programming!</p>
+        <img src="rivers-mugshot.png" class="rivers-image">
+        <h2>"What kinds of games do you play?"</h2>
+        <p>I'll play just about any scraps that are tossed my way or that I manage to dig up from the trashcan. Morally questionable dating simulators? Yep. Early 2000s shooters? You bet ya. </p>
+        <p>On top of Streaming games, I also program! (I know! Look at this pony doing all these tricks!)</p>
+        <h2>"Well, what languages do you know?"</h2>
+        <div class="div-list">
+            <ul>
+                <li>HTML, CSS, and JS (How do you think I made this website silly?)</li>
+                <li>Java</li>
+                <li>Kotlin</li>
+            </ul>
+        </div>
+        <p></p>
+        <p>I work out of a garage with a rig (thematically) made of parts I scrounged up from the waste. I look forward to showcasing my skills to the world!</p>
+        <h1>Socials</h1>
+        <div class="row">
+            <div class="column"><a href="https://www.youtube.com/channel/UCH5ABl-48q49cO268GA30Sw"><img src="yt_logo_rgb_dark.png" class="social-image"></a></div>
+            <div class="column"><a href="https://twitter.com/Rivers_Racoco"><img src="2021 Twitter logo - blue.png" class="social-image"></a></div>
+        </div>
     </body>
 </html>
