Added github Social

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="row">
             <div class="column"><a href="https://www.youtube.com/channel/UCH5ABl-48q49cO268GA30Sw"><img src="yt_logo_rgb_dark.png" class="social-image"></a></div>
             <div class="column"><a href="https://twitter.com/Rivers_Racoco"><img src="2021 Twitter logo - blue.png" class="social-image"></a></div>
+            <div class="column"><a href="https://github.com/RiversRacoco"><img src="github-mark-white.png" class="social-image"></a></div>
         </div>
     </body>
 </html>
