removed stretching issues with picture on slimmer pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </div>
         <p></p>
-        <p>I work out of a garage with a rig (thematically) made of parts I scrounged up from the waste. I look forward to showcasing my skills to the world!</p>
+        <!--<p>I work out of a garage with a rig (thematically) made of parts I scrounged up from the waste. I look forward to showcasing my skills to the world!</p>-->
         <h1>Socials</h1>
         <div class="row">
             <div class="column"><a href="https://www.youtube.com/channel/UCH5ABl-48q49cO268GA30Sw"><img src="yt_logo_rgb_dark.png" class="social-image"></a></div>
