--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div id="gradient"></div>
         <h1>Who am I?</h1>
         <p>Hi, I'm Rivers Racoco! I'm your average Racoon based V-tuber who enjoys programming!</p>
-        <img src="rivers-mugshot.png" class="rivers-image">
+        <img src="rivers-mugshot-gradient.png" class="rivers-image">
         <h2>"What kinds of games do you play?"</h2>
         <p>I'll play just about any scraps that are tossed my way or that I manage to dig up from the trashcan. Morally questionable dating simulators? Yep. Early 2000s shooters? You bet ya. </p>
-        <p>On top of Streaming games, I also program! (I know! Look at this pony doing all these tricks!)</p>
+        <p>On top of Streaming games, I also program!</p>
         <h2>"Well, what languages do you know?"</h2>
         <div class="div-list">
             <ul>
-                <li>HTML, CSS, and JS (How do you think I made this website silly?)</li>
+                <li>HTML, CSS, and JS <br>(How do you think I made this website silly?)</li>
                 <li>Java</li>
                 <li>Kotlin</li>
             </ul>
