--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <html>
     <body>
-        <img src="banner.png" class="header-Image header-parallax">
-        <div id="gradient"></div>
+        <div class="crop">
+            <img src="banner.png" class="header-Image header-parallax">
+        </div>
+            <div id="gradient"></div>
         <h1>Who am I?</h1>
         <p>Hi, I'm Rivers Racoco! I'm your average Racoon based V-tuber who enjoys programming!</p>
         <img src="rivers-mugshot-gradient.png" class="rivers-image">
