Added new banner

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <html>
     <body>
         <div class="crop">
-            <img src="banner.png" class="header-Image header-parallax">
+            <img src="banner_new.png" class="header-Image header-parallax">
         </div>
             <div id="gradient"></div>
         <h1>Who am I?</h1>
