Scaleable banner on mobile devices

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <html>
     <body>
-        <div class="crop">
-            <img src="banner_new.png" class="header-Image header-parallax">
+        <div class="header">
+            <img src="banner_new.png" class="header img">
         </div>
             <div id="gradient"></div>
         <h1>Who am I?</h1>
