--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 </head>
 <html>
     <body>
+        <ul>
+            <li><a href="default.asp">Home</a></li>
+            <li><a href="news.asp">News</a></li>
+            <li><a href="contact.asp">Contact</a></li>
+            <li><a href="about.asp">About</a></li>
+        </ul> 
         <div class="header">
             <img src="banner_new.png" class="header img">
         </div>
             <div id="gradient"></div>
         <h1>Who am I?</h1>
-        <p>Hi, I'm Rivers Racoco! I'm your average Racoon based V-tuber who enjoys programming!</p>
+        <p>Hi, I'm Rivers Racoco (He/Him)! I'm your average Racoon based V-tuber who enjoys programming!</p>
         <img src="rivers-mugshot-gradient.png" class="rivers-image">
         <h2>"What kinds of games do you play?"</h2>
         <p>I'll play just about any scraps that are tossed my way or that I manage to dig up from the trashcan. Morally questionable dating simulators? Yep. Early 2000s shooters? You bet ya. </p>
