added NavButtons and started on Game Recommendations page

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 </head>
 <html>
     <body>
-        <ul>
-            <li><a href="default.asp">Home</a></li>
-            <li><a href="news.asp">News</a></li>
-            <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">About</a></li>
-        </ul> 
         <div class="header">
             <img src="banner_new.png" class="header img">
         </div>
@@ -26,6 +20,9 @@
         <img src="rivers-mugshot-gradient.png" class="rivers-image">
         <h2>"What kinds of games do you play?"</h2>
         <p>I'll play just about any scraps that are tossed my way or that I manage to dig up from the trashcan. Morally questionable dating simulators? Yep. Early 2000s shooters? You bet ya. </p>
+        <h2>If You want to see more, you can check what i'm currently playing or what games i recommend using the buttons below!</h2>
+        <button class="button"><a href = "game-recommendations.html"></a>Current Games I'm Playing</button>
+        <button class="button">Game Recommendations</button>
         <p>On top of Streaming games, I also program!</p>
         <h2>"Well, what languages do you know?"</h2>
         <div class="div-list">
@@ -35,13 +32,19 @@
                 <li>Kotlin</li>
             </ul>
         </div>
-        <p></p>
+
         <!--<p>I work out of a garage with a rig (thematically) made of parts I scrounged up from the waste. I look forward to showcasing my skills to the world!</p>-->
         <h1>Socials</h1>
         <div class="row">
             <div class="column"><a href="https://www.youtube.com/channel/UCH5ABl-48q49cO268GA30Sw"><img src="yt_logo_rgb_dark.png" class="social-image"></a></div>
             <div class="column"><a href="https://twitter.com/Rivers_Racoco"><img src="2021 Twitter logo - blue.png" class="social-image"></a></div>
             <div class="column"><a href="https://github.com/RiversRacoco"><img src="github-mark-white.png" class="social-image"></a></div>
+        </div>
+        <div class="footer">
+            <button class="button">About Me</button>
+            <button class="button">Streaming Schedule</button>
+            <button class="button">Clips</button>
+
         </div>
     </body>
 </html>
