--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>"What kinds of games do you play?"</h2>
         <p>I'll play just about any scraps that are tossed my way or that I manage to dig up from the trashcan. Morally questionable dating simulators? Yep. Early 2000s shooters? You bet ya. </p>
         <h2>If You want to see more, you can check what i'm currently playing or what games i recommend using the buttons below!</h2>
-        <button class="button" href = "https://riversracoco.github.io/game-recommendations">Current Games I'm Playing</button>
+        <button class="button" onclick="location.href='https://riversracoco.github.io/game-recommendations';">Current Games I'm Playing</button>
         <button class="button">Game Recommendations</button>
         <p>On top of Streaming games, I also program!</p>
         <h2>"Well, what languages do you know?"</h2>
