--- a/game-recommendations.html
+++ b/game-recommendations.html
@@ -14,9 +14,55 @@
 <div class="slideshow-container">
     <div class="slide">
         <div class="title"></div>
-        <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108710/header.jpg?t=1667485381" alt="" style="width: 25%;">
+        <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108710/header.jpg?t=1667485381" alt="" style="width: 100%;">
     </div>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
+<br>
 
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+</div>
 </body>
 </html>
+
+<style>
+    * {box-sizing:border-box}
+
+    .slideshow-container {
+        max-width: 1000px;
+        position: relative;
+        margin: auto;
+    }
+
+    .mySlides {
+        display: none;
+    }
+
+    .prev, .next {
+        cursor: pointer;
+        position:absolute;
+        top:50%;
+        width: auto;
+        margin-top: -22px;
+        padding: 16px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius:  0 3px 3px 0;
+        user-select: none;
+    }
+
+    .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+    }
+
+    .prev:hover, .next:hover {
+        background-color: rgba(0,0,0,0.8);
+    }
+</style>
