--- a/game-recommendations.html
+++ b/game-recommendations.html
@@ -6,16 +6,28 @@
 
   <title>River's Game Recommendations</title>
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
 <div class="slideshow-container">
-    <div class="slide">
-        <div class="title"></div>
-        <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108710/header.jpg?t=1667485381" alt="" style="width: 100%;">
+    <div class="mySlides">
+        <div class="numbertext">1/3</div>
+        <a href="https://store.steampowered.com/app/108710/Alan_Wake/" target=”_blank”><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108710/library_600x900_2x.jpg?t=1667485325" alt="Alan Wake Banner from Steam" class="slideshow-image"></a>
+        <div class="text">Alan Wake</div>
     </div>
+    <div class="mySlides">
+        <div class="numbertext">2/3</div>
+        <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/" target=”_blank”><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1174180/library_600x900_2x.jpg?t=1671484934" alt="Red Dead Redemption 2 from Steam" class="slideshow-image"></a>
+        <div class="text">Red Dead Redemption 2</div>
+    </div>
+    <div class="mySlides">
+        <div class="numbertext">3/3</div>
+        <a href="https://store.steampowered.com/app/289650/Assassins_Creed_Unity/" target=”_blank”><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/289650/library_600x900_2x.jpg?t=1575045046" alt="Assassins Creed Unity Banner from Steam" class="slideshow-image"></a>
+        <div class="text">Assassins Creed Unity</div>
+    </div>
+
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
@@ -29,40 +41,33 @@
 </body>
 </html>
 
-<style>
-    * {box-sizing:border-box}
+<script>
+    let slideIndex = 1;
+showSlides(slideIndex);
 
-    .slideshow-container {
-        max-width: 1000px;
-        position: relative;
-        margin: auto;
-    }
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
 
-    .mySlides {
-        display: none;
-    }
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
 
-    .prev, .next {
-        cursor: pointer;
-        position:absolute;
-        top:50%;
-        width: auto;
-        margin-top: -22px;
-        padding: 16px;
-        color: white;
-        font-weight: bold;
-        font-size: 18px;
-        transition: 0.6s ease;
-        border-radius:  0 3px 3px 0;
-        user-select: none;
-    }
-
-    .next {
-        right: 0;
-        border-radius: 3px 0 0 3px;
-    }
-
-    .prev:hover, .next:hover {
-        background-color: rgba(0,0,0,0.8);
-    }
-</style>
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+} 
+</script>
