--- a/game-recommendations.html
+++ b/game-recommendations.html
@@ -3,71 +3,85 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>River's Game Recommendations</title>
-
   <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
-<div class="slideshow-container">
+  <div class="slideshow-container">
     <div class="mySlides">
-        <div class="numbertext">1/3</div>
-        <a href="https://store.steampowered.com/app/108710/Alan_Wake/" target=”_blank”><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108710/library_600x900_2x.jpg?t=1667485325" alt="Alan Wake Banner from Steam" class="slideshow-image"></a>
-        <div class="text">Alan Wake</div>
+      <div class="numbertext">1/3</div>
+      <a href="https://store.steampowered.com/app/108710/Alan_Wake/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108710/library_600x900_2x.jpg?t=1667485325" alt="Alan Wake Banner from Steam" class="slideshow-image"></a>
+      <div class="text">Alan Wake</div>
     </div>
     <div class="mySlides">
-        <div class="numbertext">2/3</div>
-        <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/" target=”_blank”><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1174180/library_600x900_2x.jpg?t=1671484934" alt="Red Dead Redemption 2 from Steam" class="slideshow-image"></a>
-        <div class="text">Red Dead Redemption 2</div>
+      <div class="numbertext">2/3</div>
+      <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1174180/library_600x900_2x.jpg?t=1671484934" alt="Red Dead Redemption 2 from Steam" class="slideshow-image"></a>
+      <div class="text">Red Dead Redemption 2</div>
     </div>
     <div class="mySlides">
-        <div class="numbertext">3/3</div>
-        <a href="https://store.steampowered.com/app/289650/Assassins_Creed_Unity/" target=”_blank”><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/289650/library_600x900_2x.jpg?t=1575045046" alt="Assassins Creed Unity Banner from Steam" class="slideshow-image"></a>
-        <div class="text">Assassins Creed Unity</div>
+      <div class="numbertext">3/3</div>
+      <a href="https://store.steampowered.com/app/289650/Assassins_Creed_Unity/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/289650/library_600x900_2x.jpg?t=1575045046" alt="Assassins Creed Unity Banner from Steam" class="slideshow-image"></a>
+      <div class="text">Assassins Creed Unity</div>
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
+  </div>
+  <br>
 
-<div style="text-align:center">
+  <div style="text-align: center">
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+<div id="grid">
+  <div class="grid-row">
+    <button><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/333600/library_600x900_2x.jpg?t=1567621552" alt="" ></button>
+    <button><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108600/library_600x900.jpg?t=1634736141" alt=""></button>
+    <button><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/223470/library_600x900_2x.jpg?t=1666814061" alt=""></button>
+    <button><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1035990/library_600x900_2x.jpg?t=1644868850" alt=""></button>
+    <button><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/870780/library_600x900_2x.jpg?t=1655916741" alt=""></button>
+    <button><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/202750/library_600x900_2x.jpg?t=1667485590" alt=""></button>
+    <button><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/802870/library_600x900_2x.jpg?t=1567708446" alt=""></button>
+    <button><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/225540/library_600x900_2x.jpg?t=1660137853" alt=""></button>
+    <button><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1449690/library_600x900_2x.jpg?t=1688062377" alt=""></button>
+    <button><img src="https://cdn2.steamgriddb.com/file/sgdb-cdn/thumb/8b61bea7c746f8d19c40d1a2abb32fa0.jpg" alt=""></button>
+  </div>
 </div>
+  <script>
+    let slideIndex = 1;
+    showSlides(slideIndex);
+
+    // Next/previous controls
+    function plusSlides(n) {
+      showSlides((slideIndex += n));
+    }
+
+    // Thumbnail image controls
+    function currentSlide(n) {
+      showSlides((slideIndex = n));
+    }
+
+    function showSlides(n) {
+      let i;
+      let slides = document.getElementsByClassName("mySlides");
+      let dots = document.getElementsByClassName("dot");
+      if (n > slides.length) {
+        slideIndex = 1;
+      }
+      if (n < 1) {
+        slideIndex = slides.length;
+      }
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex - 1].style.display = "block";
+      dots[slideIndex - 1].className += " active";
+    }
+  </script>
 </body>
 </html>
-
-<script>
-    let slideIndex = 1;
-showSlides(slideIndex);
-
-// Next/previous controls
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-// Thumbnail image controls
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  let i;
-  let slides = document.getElementsByClassName("mySlides");
-  let dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-} 
-</script>
