Organized Folder and optimized web layout

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 
   <title>Rivers Racoco</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <html>
     <body>
         <div class="header">
-            <img src="banner_new.png" class="header img">
+            <img src="img/banner_new.png" class="header img">
         </div>
             <div id="gradient"></div>
         <h1>Who am I?</h1>
         <p>Hi, I'm Rivers Racoco (He/Him)! I'm your average Racoon based V-tuber who enjoys programming!</p>
-        <img src="rivers-mugshot-gradient.png" class="rivers-image">
+        <img src="img/rivers-mugshot-gradient.png" class="rivers-image">
         <h2>"What kinds of games do you play?"</h2>
         <p>I'll play just about any scraps that are tossed my way or that I manage to dig up from the trashcan. Morally questionable dating simulators? Yep. Early 2000s shooters? You bet ya. </p>
         <h2>If You want to see more, you can check what i'm currently playing or what games i recommend using the buttons below!</h2>
@@ -36,9 +36,9 @@
         <!--<p>I work out of a garage with a rig (thematically) made of parts I scrounged up from the waste. I look forward to showcasing my skills to the world!</p>-->
         <h1>Socials</h1>
         <div class="row">
-            <div class="column"><a href="https://www.youtube.com/channel/UCH5ABl-48q49cO268GA30Sw"><img src="yt_logo_rgb_dark.png" class="social-image"></a></div>
-            <div class="column"><a href="https://twitter.com/Rivers_Racoco"><img src="2021 Twitter logo - blue.png" class="social-image"></a></div>
-            <div class="column"><a href="https://github.com/RiversRacoco"><img src="github-mark-white.png" class="social-image"></a></div>
+            <div class="column"><a href="https://www.youtube.com/channel/UCH5ABl-48q49cO268GA30Sw"><img src="img/yt_logo_rgb_dark.png" class="social-image"></a></div>
+            <div class="column"><a href="https://twitter.com/Rivers_Racoco"><img src="img/2021 Twitter logo - blue.png" class="social-image"></a></div>
+            <div class="column"><a href="https://github.com/RiversRacoco"><img src="img/github-mark-white.png" class="social-image"></a></div>
         </div>
         <div class="footer">
             <button class="button">About Me</button>
