Updated the about me button and added a button to navigate the site

--- a/game-recommendations.html
+++ b/game-recommendations.html
@@ -37,7 +37,7 @@
     <span class="dot" onclick="currentSlide(3)"></span>
   </div>
 
-  <h1>River's Other Recemendations</h1>
+  <h2>River's Other Recemendations</h2>
 <div id="grid">
   <div class="grid-row">
     <button><a href="https://store.steampowered.com/app/333600/NEKOPARA_Vol_1/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/333600/library_600x900_2x.jpg?t=1567621552" alt="" ></a></button>
@@ -51,6 +51,12 @@
     <button><a href="https://store.steampowered.com/app/1449690/The_Walking_Dead_The_Telltale_Definitive_Series/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1449690/library_600x900_2x.jpg?t=1688062377" alt=""></a></button>
     <button><a href="https://www.technicpack.net/modpack/attack-of-the-bteam.552556" target="_blank"><img src="https://cdn2.steamgriddb.com/file/sgdb-cdn/thumb/8b61bea7c746f8d19c40d1a2abb32fa0.jpg" alt=""></a></button>
   </div>
+</div>
+<div class="footer">
+<button class="button" onclick="location.href='https://riversracoco.github.io'">About Me</button>
+  <button class="button">Streaming Schedule</button>
+  <button class="button">Clips</button>
+
 </div>
   <script>
     let slideIndex = 1;
