--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="column"><a href="https://github.com/RiversRacoco"><img src="img/github-mark-white.png" class="social-image"></a></div>
         </div>
         <div class="footer">
-            <button class="button">About Me</button>
+            <button class="button" onclick="location.href='https://riversracoco.github.io'">About Me</button>
             <button class="button">Streaming Schedule</button>
             <button class="button">Clips</button>
 
