Updated CSS to be consistent to Stream Overlay with grey borders and background colors

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         </div>
 
         <!--<p>I work out of a garage with a rig (thematically) made of parts I scrounged up from the waste. I look forward to showcasing my skills to the world!</p>-->
-        <h1>Socials</h1>
-        <div class="row">
-            <div class="column"><a href="https://www.youtube.com/channel/UCH5ABl-48q49cO268GA30Sw"><img src="img/yt_logo_rgb_dark.png" class="social-image"></a></div>
-            <div class="column"><a href="https://twitter.com/Rivers_Racoco"><img src="img/2021 Twitter logo - blue.png" class="social-image"></a></div>
-            <div class="column"><a href="https://github.com/RiversRacoco"><img src="img/github-mark-white.png" class="social-image"></a></div>
+        <div id="socials">
+            <h1>Socials</h1>
+            <div class="row" >
+                <div class="column"><a href="https://www.youtube.com/channel/UCH5ABl-48q49cO268GA30Sw"><img src="img/yt_logo_rgb_dark.png" class="social-image"></a></div>
+                <div class="column"><a href="https://twitter.com/Rivers_Racoco"><img src="img/2021 Twitter logo - blue.png" class="social-image"></a></div>
+                <div class="column"><a href="https://github.com/RiversRacoco"><img src="img/github-mark-white.png" class="social-image"></a></div>
+            </div>
         </div>
         <div class="footer">
             <button class="button" onclick="location.href='https://riversracoco.github.io'">About Me</button>
