Added Borders Elsewhere

--- a/game-recommendations.html
+++ b/game-recommendations.html
@@ -36,20 +36,21 @@
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
   </div>
-
-  <h2>River's Other Recemendations</h2>
-<div id="grid">
-  <div class="grid-row">
-    <button><a href="https://store.steampowered.com/app/333600/NEKOPARA_Vol_1/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/333600/library_600x900_2x.jpg?t=1567621552" alt="" ></a></button>
-    <button><a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108600/library_600x900.jpg?t=1634736141" alt=""></a></button>
-    <button><a href="https://store.steampowered.com/app/223470/POSTAL_2/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/223470/library_600x900_2x.jpg?t=1666814061" alt=""></a></button>
-    <button><a href="https://store.steampowered.com/app/1035990/Dialtown_Phone_Dating_Sim/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1035990/library_600x900_2x.jpg?t=1644868850" alt=""></a></button>
-    <button><a href="https://store.steampowered.com/app/870780/Control_Ultimate_Edition/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/870780/library_600x900_2x.jpg?t=1655916741" alt=""></a></button>
-    <button><a href="https://store.steampowered.com/app/202750/Alan_Wakes_American_Nightmare/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/202750/library_600x900_2x.jpg?t=1667485590" alt=""></a></button>
-    <button><a href="https://store.steampowered.com/app/802870/The_Ditzy_Demons_Are_in_Love_With_Me/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/802870/library_600x900_2x.jpg?t=1567708446" alt=""></a></button>
-    <button><a href="https://store.steampowered.com/app/225540/Just_Cause_3/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/225540/library_600x900_2x.jpg?t=1660137853" alt=""></a></button>
-    <button><a href="https://store.steampowered.com/app/1449690/The_Walking_Dead_The_Telltale_Definitive_Series/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1449690/library_600x900_2x.jpg?t=1688062377" alt=""></a></button>
-    <button><a href="https://www.technicpack.net/modpack/attack-of-the-bteam.552556" target="_blank"><img src="https://cdn2.steamgriddb.com/file/sgdb-cdn/thumb/8b61bea7c746f8d19c40d1a2abb32fa0.jpg" alt=""></a></button>
+<div id="box">
+    <h2>River's Other Recemendations</h2>
+  <div id="grid">
+    <div class="grid-row">
+      <button><a href="https://store.steampowered.com/app/333600/NEKOPARA_Vol_1/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/333600/library_600x900_2x.jpg?t=1567621552" alt="" ></a></button>
+      <button><a href="https://store.steampowered.com/app/108600/Project_Zomboid/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108600/library_600x900.jpg?t=1634736141" alt=""></a></button>
+      <button><a href="https://store.steampowered.com/app/223470/POSTAL_2/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/223470/library_600x900_2x.jpg?t=1666814061" alt=""></a></button>
+      <button><a href="https://store.steampowered.com/app/1035990/Dialtown_Phone_Dating_Sim/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1035990/library_600x900_2x.jpg?t=1644868850" alt=""></a></button>
+      <button><a href="https://store.steampowered.com/app/870780/Control_Ultimate_Edition/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/870780/library_600x900_2x.jpg?t=1655916741" alt=""></a></button>
+      <button><a href="https://store.steampowered.com/app/202750/Alan_Wakes_American_Nightmare/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/202750/library_600x900_2x.jpg?t=1667485590" alt=""></a></button>
+      <button><a href="https://store.steampowered.com/app/802870/The_Ditzy_Demons_Are_in_Love_With_Me/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/802870/library_600x900_2x.jpg?t=1567708446" alt=""></a></button>
+      <button><a href="https://store.steampowered.com/app/225540/Just_Cause_3/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/225540/library_600x900_2x.jpg?t=1660137853" alt=""></a></button>
+      <button><a href="https://store.steampowered.com/app/1449690/The_Walking_Dead_The_Telltale_Definitive_Series/" target="_blank"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1449690/library_600x900_2x.jpg?t=1688062377" alt=""></a></button>
+      <button><a href="https://www.technicpack.net/modpack/attack-of-the-bteam.552556" target="_blank"><img src="https://cdn2.steamgriddb.com/file/sgdb-cdn/thumb/8b61bea7c746f8d19c40d1a2abb32fa0.jpg" alt=""></a></button>
+    </div>
   </div>
 </div>
 <div class="footer">
