--- a/index.html
+++ b/index.html
@@ -15,23 +15,16 @@
             <img src="img/banner_new.png" class="header img">
         </div>
             <div id="gradient"></div>
-        <h1>Who am I?</h1>
-        <p>Hi, I'm Rivers Racoco (He/Him)! I'm your average Racoon based V-tuber who enjoys programming!</p>
-        <img src="img/rivers-mugshot-gradient.png" class="rivers-image">
-        <h2>"What kinds of games do you play?"</h2>
-        <p>I'll play just about any scraps that are tossed my way or that I manage to dig up from the trashcan. Morally questionable dating simulators? Yep. Early 2000s shooters? You bet ya. </p>
-        <h2>If You want to see more, you can check what i'm currently playing or what games i recommend using the buttons below!</h2>
+        <div id="box">
+            <h1>Who am I?</h1>
+            <p>Hi, I'm Rivers Racoco (He/Him)! I'm your average Racoon based V-tuber who enjoys programming!</p>
+            <img src="img/rivers-mugshot-gradient.png" class="rivers-image">
+            <h2>"What kinds of games do you play?"</h2>
+            <p>I'll play just about any scraps that are tossed my way or that I manage to dig up from the trashcan. Morally questionable dating simulators? Yep. Early 2000s shooters? You bet ya. </p>
+            <h2>If You want to see more, you can check what i'm currently playing or what games i recommend using the buttons below!</h2>
+        </div>
         <button>Current Games I'm Playing</button>
         <button onclick="location.href='https://riversracoco.github.io/game-recommendations';">Game Recommendations</button>
-        <p>On top of Streaming games, I also program!</p>
-        <h2>"Well, what languages do you know?"</h2>
-        <div class="div-list">
-            <ul>
-                <li>HTML, CSS, and JS <br>(How do you think I made this website silly?)</li>
-                <li>Java</li>
-                <li>Kotlin</li>
-            </ul>
-        </div>
 
         <!--<p>I work out of a garage with a rig (thematically) made of parts I scrounged up from the waste. I look forward to showcasing my skills to the world!</p>-->
         <div id="socials">
