--- a/game-recommendations.html
+++ b/game-recommendations.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div id="box">
     <h1>River's Top 3 Games</h1>
     <div class="slideshow-container">
     <div class="mySlides">
@@ -36,6 +37,7 @@
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
   </div>
+</div>
 <div id="box">
     <h2>River's Other Recemendations</h2>
   <div id="grid">
